[package]
name = "trie-benchmark"
version = "0.1.0"
authors = ["chenfeitong <chenfeitong@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "^0.3"
anyhow = "^1"

[[bench]]
name = "trie_insertion"
harness = false
