[package]
name = "ac-benchmark"
version = "0.1.0"
authors = ["chenfeitong <chenfeitong@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
argh = "^0.1"

[dev-dependencies]
criterion = "^0.3"
rand = "^0.8"

[[bench]]
name = "trie"
harness = false
